# searchcode-python

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini
searchcode/: __init__.py  _main.py  api.py  cli.py  filters.py
src/searchcode/: __app.py  __init__.py  __lib.py  _lib.py  api.py  filters.py
src/searchcode/__cli/: app.py  lib.py
src/searchcode/_cli/: app.py  panels.py
tests/: test_searchcode.py
